# slynx_s_war_thunder

./: .gitignore  CMakeLists.txt
resources/: Slynx.rc
src/: Shared.cpp  Shared.h
src/game/: GameManager.cpp  GameManager.h
src/launcher/: LauncherManager.cpp  LauncherManager.h
src/logger/: Logger.cpp  Logger.h
